--- a/Pricing.html
+++ b/Pricing.html
@@ -23,7 +23,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="logo">
-                <a href="Home.html">
+                <a href="index.html">
                     <img
                         src="Media/Influnnect-Impulze-Logo.png"
                         alt="Influnnect"
