--- a/Pricing.html
+++ b/Pricing.html
@@ -13,7 +13,7 @@
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         />
-        <link rel="stylesheet" href="css/Styles.css" />
+        <link rel="stylesheet" href="CSS/Styles.css" />
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -308,9 +308,9 @@
                         alt="Friday Digital"
                     />
                     <img src="Media/MyUSALocal Logo.avif" alt="MyUSALocal" />
-                    <img src="Media/lime Logo.avif" alt="lime" />
+                    <img src="Media/Lime Logo.avif" alt="lime" />
                     <img src="Media/Rouen Bouge Logo.avif" alt="Rouen Bouge" />
-                    <img src="Media/POLYmash Logo.avif" alt="POLYmash" />
+                    <img src="Media/POLYmash Logo.png" alt="POLYmash" />
                     <img src="Media/PrideLab Logo.avif" alt="PrideLab" />
                     <img src="Media/Smargasy Logo.avif" alt="Smargasy" />
                     <!-- Repeat the logos -->
@@ -323,9 +323,9 @@
                         alt="Friday Digital"
                     />
                     <img src="Media/MyUSALocal Logo.avif" alt="MyUSALocal" />
-                    <img src="Media/lime Logo.avif" alt="lime" />
+                    <img src="Media/Lime Logo.avif" alt="lime" />
                     <img src="Media/Rouen Bouge Logo.avif" alt="Rouen Bouge" />
-                    <img src="Media/POLYmash Logo.avif" alt="POLYmash" />
+                    <img src="Media/POLYmash Logo.png" alt="POLYmash" />
                     <img src="Media/PrideLab Logo.avif" alt="PrideLab" />
                     <img src="Media/Smargasy Logo.avif" alt="Smargasy" />
                 </div>
