--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                         alt="Friday Digital"
                     />
                     <img src="Media/MyUSALocal Logo.avif" alt="MyUSALocal" />
-                    <img src="Media/lime Logo.avif" alt="lime" />
+                    <img src="Media/Lime Logo.avif" alt="lime" />
                     <img src="Media/Rouen Bouge Logo.avif" alt="Rouen Bouge" />
-                    <img src="Media/POLYmash Logo.avif" alt="POLYmash" />
+                    <img src="Media/POLYmash Logo.png" alt="POLYmash" />
                     <img src="Media/PrideLab Logo.avif" alt="PrideLab" />
                     <img src="Media/Smargasy Logo.avif" alt="Smargasy" />
                     <!-- Repeat the logos -->
@@ -300,9 +300,9 @@
                         alt="Friday Digital"
                     />
                     <img src="Media/MyUSALocal Logo.avif" alt="MyUSALocal" />
-                    <img src="Media/lime Logo.avif" alt="lime" />
+                    <img src="Media/Lime Logo.avif" alt="lime" />
                     <img src="Media/Rouen Bouge Logo.avif" alt="Rouen Bouge" />
-                    <img src="Media/POLYmash Logo.avif" alt="POLYmash" />
+                    <img src="Media/POLYmash Logo.png" alt="POLYmash" />
                     <img src="Media/PrideLab Logo.avif" alt="PrideLab" />
                     <img src="Media/Smargasy Logo.avif" alt="Smargasy" />
                 </div>
