--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
             <!-- Hero Image Bar -->
             <div class="hero-image">
-                <img src="Media/Hero-image.svg" alt="Influencer Marketing" />
+                <img src="Media/Hero-Image.svg" alt="Influencer Marketing" />
             </div>
         </section>
 
