--- a/Affiliate-Program.html
+++ b/Affiliate-Program.html
@@ -182,7 +182,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="pricing.html">Pricing</a>
+                    <a href="Pricing.html">Pricing</a>
                 </li>
                 <li>
                     <a href="affiliate-program.html">Affiliate Program</a>
