--- a/index.html
+++ b/index.html
@@ -315,6 +315,6 @@
 
         <!-- Reviews -->
 
-        <script src="js/script.js"></script>
+        <script src="js/Script.js"></script>
     </body>
 </html>
