--- a/Pricing.html
+++ b/Pricing.html
@@ -567,6 +567,6 @@
             </table>
         </section>
 
-        <script src="js/script.js"></script>
+        <script src="js/Script.js"></script>
     </body>
 </html>
