--- a/InFlunnecT AI.html
+++ b/InFlunnecT AI.html
@@ -202,6 +202,6 @@
             </div>
         </nav>
 
-        <script src="js/script.js"></script>
+        <script src="js/Script.js"></script>
     </body>
 </html>
