--- a/Affiliate-Program.html
+++ b/Affiliate-Program.html
@@ -202,6 +202,6 @@
             </div>
         </nav>
 
-        <script src="Website/script.js"></script>
+        <script src="Website/Script.js"></script>
     </body>
 </html>
