--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <a href="Pricing.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="affiliate-program.html">Affiliate Program</a>
+                    <a href="Affiliate-Program.html">Affiliate Program</a>
                 </li>
             </ul>
             <div class="buttons">
