--- a/InFlunnecT AI.html
+++ b/InFlunnecT AI.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <nav class="navbar">
+                <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
                     <img
@@ -185,7 +185,7 @@
                     <a href="Pricing.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="affiliate-program.html">Affiliate Program</a>
+                    <a href="Affiliate-Program.html">Affiliate Program</a>
                 </li>
             </ul>
             <div class="buttons">
