--- a/Affiliate-Program.html
+++ b/Affiliate-Program.html
@@ -21,7 +21,7 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <nav class="navbar">
+                <nav class="navbar">
             <div class="logo">
                 <a href="index.html">
                     <img
@@ -139,7 +139,7 @@
                     </div>
                 </li>
                 <li>
-                    <a href="SocialiQ-2.0.html">SocialiQ 2.0</a>
+                    <a href="InFlunnecT AI.html">InFlunnecT AI</a>
                 </li>
                 <li class="dropdown">
                     <a href="#"
@@ -185,7 +185,7 @@
                     <a href="Pricing.html">Pricing</a>
                 </li>
                 <li>
-                    <a href="affiliate-program.html">Affiliate Program</a>
+                    <a href="Affiliate-Program.html">Affiliate Program</a>
                 </li>
             </ul>
             <div class="buttons">
@@ -201,7 +201,7 @@
                 >
             </div>
         </nav>
-
+        
         <script src="Website/Script.js"></script>
     </body>
 </html>
